# flickr-cli-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/dedupe-engine/: Cargo.toml
crates/dedupe-engine/src/: download.rs  engine.rs  lib.rs  models.rs  onnx.rs  phash.rs  preprocess.rs  similarity.rs
crates/flickr-api/: Cargo.toml
crates/flickr-api/src/: auth.rs  client.rs  lib.rs  types.rs
crates/flickr-cli/: Cargo.toml
crates/flickr-cli/src/: cli.rs  config.rs  main.rs
crates/flickr-cli/src/commands/: ai_dedupe.rs  auth.rs  benchmark.rs  fuzzy_scan.rs  mod.rs  scan.rs  sync_flickr.rs
