[workspace]
resolver = "2"
members = [
    "crates/flickr-cli",
    "crates/flickr-api",
    "crates/dedupe-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# CLI / UX
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# Testing
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic overrides — these are too noisy for this codebase
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
unreadable_literal = "allow"
doc_markdown = "allow"
uninlined_format_args = "allow"
excessive_precision = "allow"
redundant_closure_for_method_calls = "allow"
needless_pass_by_value = "allow"
match_same_arms = "allow"
