[package]
name = "dedupe-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
ndarray = "0.16"

[dependencies.ort]
version = "2.0.0-rc.9"
optional = true

[dependencies.image_hasher]
version = "2"
optional = true

[dependencies.hf-hub]
version = "0.4"
optional = true

[features]
default = ["phash"]
onnx = ["dep:ort"]
phash = ["dep:image_hasher"]
coreml = ["onnx"]
download = ["dep:hf-hub"]
full = ["onnx", "phash", "coreml", "download"]

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
