[package]
name = "flickr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "flickr-cli"
path = "src/main.rs"

[dependencies]
flickr-api = { path = "../flickr-api" }
dedupe-engine = { path = "../dedupe-engine" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
rapidfuzz = "0.5"

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
